<resources>
    <string name="app_name">TheLabyrinth</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="the_labyrinth">The Labyrinth</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="login">Login</string>
    <string name="the_labyrinthTitle">The labyrinth</string>
    <string name="connection">Connection</string>
    <string name="etml">©ETML</string>
    <string name="nicolas_lema_and_esteban_lopez">Nicolas Lema and Esteban lopez</string>
</resources>
